Added conf, switched user and did a lot
