# docs/swagger.yaml
@@ -51,6 +51,8 @@ definitions:
         type: string
       id:
         type: integer
+      password:
+        type: string
       role:
         type: string
       updatedAt:
@@ -68,6 +70,8 @@ definitions:
         type: string
       id:
         type: integer
+      password:
+        type: string
       role:
         type: string
       updatedAt:
