# internal/models/user.go
@@ -1,17 +1,19 @@
 package models
 
 import (
+	"log"
+
 	"github.com/mikietechie/gocurrenciesapi/internal/utils"
 	"gorm.io/gorm"
 )
 
 type User struct {
 	gorm.Model
-	Email    string `gorm:"size:255;not null;unique" json:"email"`
-	Password string `gorm:"size:255;not null" json:"-"`
-	// password string `gorm:"size:255;not null" json:"-"`
-	Role   string `gorm:"size:255;not null" json:"role"`
-	Active bool   `gorm:"default:true" json:"active"`
+	Email       string `gorm:"size:255;not null;unique" json:"email"`
+	Password    string `gorm:"size:255;not null" json:"-"`
+	NewPassword string `gorm:"size:255" json:"password"`
+	Role        string `gorm:"size:255;not null" json:"role"`
+	Active      bool   `gorm:"default:true" json:"active"`
 }
 
 type ReadUser struct {
@@ -27,4 +29,17 @@ func (u *User) GetReadUser() ReadUser {
 	var ru ReadUser
 	Db.Model(&u).Scan(&ru)
 	return ru
+}
+
+func (user *User) SetPassword() {
+	log.Println("Setting Password")
+	if user.NewPassword != "" && user.NewPassword != user.Password {
+		user.Password = utils.Hash256(user.NewPassword)
+		user.NewPassword = ""
+	}
+}
+
+func (user *User) BeforeSave(tx *gorm.DB) (err error) {
+	user.SetPassword()
+	return
 }
